--- a/exercise1.html
+++ b/exercise1.html
@@ -11,7 +11,7 @@
 <img width=100px, height= 100px, src="profile.png">
 <div>
     <p> <a href="https://www.ucalgary.ca">University of Calgary</a></p>
-    <p> <a href"">History</a></p>
+    <p> <a href"exercise2.html">History</a></p>
 </div>
 <h2>My Hobbies</h2>
 <ul>
