minor form changes

--- a/exercise1.html
+++ b/exercise1.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 
 <html>
-
 <head>
-<title>Personal Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Page</title>
 </head>
-
-<body>
-<h1>My Personal Page</h1>
-<img width=100px, height= 100px, src="profile.png">
-<div>
-    <p> <a href="https://www.ucalgary.ca">University of Calgary</a></p>
-    <p> <a href"exercise2.html">History</a></p>
-</div>
-<h2>My Hobbies</h2>
-<ul>
-    <li>Partying</li>
-    <li>Collecting</li>
-    <li>Math</li>
-</ul>
-<h2>Form</h2>
-<p>Enter your name:<input type="text" name="name"> </p>
-<input type="radio" name="choice" value="Section 1">Section 1<br>
-<input type="radio" name="choice" value="Section 2">Section 2
-</body>
+    <body>
+        <h1>My Personal Page</h1>
+        <img width=100px, height= 100px, src="profile.png">
+        <div>
+            <p> <a href="https://www.ucalgary.ca">University of Calgary</a><br>
+            <a href="exercise2.html">History</a></p>
+        </div>
+        <h2>My Hobbies</h2>
+        <ul>
+            <li>Partying</li>
+            <li>Collecting</li>
+            <li>Math</li>
+        </ul>
+        <h2>Form</h2>
+        <form>
+            <label for="name">Enter your name:</label>
+            <input type="text" name="name"><br><br>
+            <input type="radio" name="choice" value="Section 1">
+            <label>Section 1</label><br>
+            <input type="radio" name="choice" value="Section 2">
+            <label>Section 2</label>
+        </form>
+    </body>
 </html>
